# polymarket-trading-bot-rust

./: README.md
polymarket-arbitrage-bot/: .gitignore  CONVERSION_NOTES.md  Cargo.toml  README.md
polymarket-arbitrage-bot/src/: main.rs
polymarket-arbitrage-bot/src/config/: constants.rs  env.rs  mod.rs
polymarket-arbitrage-bot/src/services/: arbitrage_executor.rs  create_clob_client.rs  market_discovery.rs  mod.rs  price_monitor.rs  websocket_client.rs
polymarket-arbitrage-bot/src/utils/: coin_selector.rs  keyboard.rs  logger.rs  mod.rs
polymarket-copy-trading-bot/: .config.example  .env.example  .gitignore  Cargo.toml  Makefile  README.md
polymarket-copy-trading-bot/src/: db.rs  lib.rs  main.rs  types.rs
polymarket-copy-trading-bot/src/config/: copy_strategy.rs  mod.rs
polymarket-copy-trading-bot/src/services/: mod.rs  trade_executor.rs  trade_monitor.rs
polymarket-copy-trading-bot/src/utils/: create_clob_client.rs  fetch.rs  health.rs  logger.rs  mod.rs  post_order.rs  spinner.rs  theme.rs
