[package]
name = "arb-rust"
version = "1.0.0"
edition = "2021"
description = "Polymarket Arbitrage Bot - Monitor prices for 15-minute crypto markets (Rust version)"
authors = [""]
license = "ISC"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
crossterm = "0.27"
colored = "2.0"
chrono = "0.4"
ethers = { version = "2.0", features = ["full"] }
alloy = { version = "0.1", features = ["full"] }
hex = "0.4"
futures = "0.3"
lazy_static = "1.4"

[dev-dependencies]

