[package]
name = "polymarket-copy-rust"
version = "0.1.0"
edition = "2021"
description = "Polymarket copy trading bot - Rust port of polymarket-copy-trader"
default-run = "polymarket-copy-rust"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
mongodb = "2"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
alloy = { version = "1", features = ["signer-local"] }
chrono = { version = "0.4", features = ["serde"] }
polymarket-client-sdk = { version = "0.4", features = ["clob"] }
rust_decimal = "1.34"
thiserror = "2"
url = "2"
bs58 = "0.4"
teloxide = { version = "0.12", features = ["macros"] }
regex = "1"

[[bin]]
name = "help"
path = "src/bin/help.rs"

[[bin]]
name = "validate_setup"
path = "src/bin/validate_setup.rs"

[[bin]]
name = "health_check"
path = "src/bin/health_check.rs"

[[bin]]
name = "setup"
path = "src/bin/setup.rs"

[[bin]]
name = "check_allowance"
path = "src/bin/check_allowance.rs"

[[bin]]
name = "set_token_allowance"
path = "src/bin/set_token_allowance.rs"

[[bin]]
name = "check_stats"
path = "src/bin/check_stats.rs"

[[bin]]
name = "check_pnl"
path = "src/bin/check_pnl.rs"

[[bin]]
name = "check_activity"
path = "src/bin/check_activity.rs"

[[bin]]
name = "aggregate"
path = "src/bin/aggregate.rs"

[[bin]]
name = "telegram_bot"
path = "src/bin/telegram_bot.rs"

[dev-dependencies]
tempfile = "3"
